Vylepšila jsem kód. (Jestli ho zkusím vylepšit ještě jednou stejným způsobem, asi ho epicky rozbiju)